add error and product dto
